# vyatta-image-tools

./: .gitignore  LICENSE  Makefile.am  configure.ac  testdoc.txt
backend/initramfs-tools/scripts/init-bottom/: vyatta-autoinstall
debian/: changelog  control  copyright  libvyatta-live-perl.install  libvyatta-live-perl.lintian-overrides  rules  vyatta-image-tools-initramfs-tools.install  vyatta-image-tools-routing-instance.install  vyatta-image-tools.install  vyatta-image-tools.links  vyatta-image-tools.lintian-overrides  vyatta-image-tools.postinst  vyatta-image-tools.postrm  vyatta-image-tools.preinst  vyatta-image-v1-yang.install  vyatta-op-add-system-image-v1-yang.install  vyatta-op-add-system-v1-yang.install  vyatta-op-clone-system-image-v1-yang.install  vyatta-op-clone-system-v1-yang.install  vyatta-op-copy-file-v1-yang.install  vyatta-op-delete-file-v1-yang.install  vyatta-op-delete-system-image-v1-yang.install  vyatta-op-delete-system-v1-yang.install  vyatta-op-install-image-v1-yang.install  vyatta-op-rename-system-image-v1-yang.install  vyatta-op-rename-system-v1-yang.install  vyatta-op-set-system-image-v1-yang.install  vyatta-op-set-system-v1-yang.install  vyatta-op-show-file-v1-yang.install  vyatta-op-show-log-image-v1-yang.install  vyatta-op-show-raid-v1-yang.install  vyatta-op-show-system-image-v1-yang.install  vyatta-system-boot-loader-reduced-v1-yang.install  vyatta-system-boot-loader-v1-yang.install
doc/: Makefile.am  Readme.md  get_vii.pl  vyatta-autoinstall.7.ronn
etc/grub/: default-union-grub-entry  default-union-grub.template  grub-onie.template
etc/install-system/: postinst
lib/Vyatta/: Live.pm
postinstall.d/: 50-example  50-hugepages  50-update-console  50-vyatta-misc  55-update-grub  55-update-signed-efi  70-vyatta-xen  80-create-raid-config  90-configure  95-mount-var-log  96-copy-var-log-to-partition  97-vyatta-install-log  98-umount-var-log
preinstall.d/: 10-virtualization  50-example
scripts/: clone-image.pl  install-get-partition  install-get-partition.functions  rename-image.pl  vyatta-create-partition  vyatta-create-partition.functions  vyatta-image-migrate-lb4  vyatta-image-op  vyatta-image-rpc  vyatta-image-tools.pl  vyatta-install-image  vyatta-install-image.functions  vyatta-live-image  vyatta-live-image.functions  vyatta-multiple-partition  vyatta-multiple-partition.functions  vyatta-postinstall-configure  vyatta-postinstall-setup-console  vyatta_update_grub.pl
systemd/system/: boot-grub.mount  boot.mount  vyatta-autoinstall.service  vyatta-autoinstall.target  vyatta-image.env.service
systemd/system-generators/: vyatta-autoinstall-generator
systemd/system/vyatta-config-default.service.d/: migrate.conf
tests/: Makefile.am  disk_helper.sh  postinstall.vyatta-misc.sh  postinstall.vyatta-xen.sh  preinstall.virtualization.sh  vyatta-create-partition.functions.sh  vyatta-install-image.functions.sh  vyatta-live-image.sh  vyatta-multiple-partition.functions.sh  vyatta_live.pl
vii_database/: vii.defaults
yang/: vyatta-op-add-system-image-v1.yang  vyatta-op-copy-file-v1.yang  vyatta-op-show-system-image-v1.yang  vyatta-system-boot-loader-reduced-v1.yang
(+18 files in other folders)
