TEST_EXTENSIONS = .sh .pl
SHUNIT2_LOG_COMPILER = sh
PL_LOG_COMPILER = env vyatta_sbindir=../scripts $(PERL)
AM_PL_LOG_FLAGS = -w

TESTS = postinstall.vyatta-misc.sh
TESTS += vyatta-install-image.functions.sh
TESTS += vyatta-live-image.sh
TESTS += vyatta_live.pl
TESTS += preinstall.virtualization.sh
TESTS += vyatta-create-partition.functions.sh
TESTS += vyatta-multiple-partition.functions.sh
